--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 
 <body>
-<div align="center"><img src="Reimu.jpg" alt="Reimu" width="450" height="436" longdesc="Reimu.jpg" align="middle" />
+<img src="image/！？.png" alt="蕾米">
 </div>
 <script src="https://cdn.jsdelivr.net/npm/live2d-widget@3.0.4/lib/L2Dwidget.min.js"></script> <script type="text/javascript"> L2Dwidget.init(); </script>
 </body>
 </html>
-<!--Dreamweaver是不是比用代码写网页在某些时候效率不行？？？-->
