--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html PUBLIC>
-<html>
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>灵梦喝茶</title>
-<link href="canvas#live2dcanvas { border: 0 !important; left: 0; }.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<img src="image/！？.png" alt="蕾米">
-</div>
+  
+<link href="canvas#live2dcanvas { border: 0 !important; left: 0; }.css" rel="stylesheet" type="text/css">
+  <img src="image/！？.png" alt="蕾米">
 <script src="https://cdn.jsdelivr.net/npm/live2d-widget@3.0.4/lib/L2Dwidget.min.js"></script> <script type="text/javascript"> L2Dwidget.init(); </script>
 </body>
 </html>
