--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>灵梦喝茶</title>
+<title>蕾米莉亚</title>
 </head>
 
 <body>
