--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
   
 <link href="canvas#live2dcanvas { border: 0 !important; left: 0; }.css" rel="stylesheet" type="text/css">
+  <div align="center">
+    <h3>你是不是傻</h3>
   <img src="image/！？.png" alt="蕾米">
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/live2d-widget@3.0.4/lib/L2Dwidget.min.js"></script> <script type="text/javascript"> L2Dwidget.init(); </script>
 </body>
 </html>
