--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>蕾米莉亚</title>
+  <link rel="stylesheet" href="./css/1.css">
 </head>
 
 <body>
   
 <link href="canvas#live2dcanvas { border: 0 !important; left: 0; }.css" rel="stylesheet" type="text/css">
-  <div align="center">
+  <div align="center" class="tupian">
     <h2>你是不是傻</h2>
   <img src="image/！？.png" alt="蕾米">
     </div>
