--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
   <img src="image/！？.png" alt="蕾米">
     </div>
 <script src="https://cdn.jsdelivr.net/npm/live2d-widget@3.0.4/lib/L2Dwidget.min.js"></script> <script type="text/javascript"> L2Dwidget.init(); </script>
+<div>
+  Tomcat10相比9，要在maven里修改掉
+  tomcat10中使用的包名改了，Jakarta.servlet和javax.servlet它不一样！
+所以在选择Java版本时，需要选择JakartaEE9版本，这样才兼容。如下：
+</div>
 </body>
 </html>
