--- a/MyStudy/index.html
+++ b/MyStudy/index.html
@@ -16,11 +16,9 @@
     </div>
 <script src="https://cdn.jsdelivr.net/npm/live2d-widget@3.0.4/lib/L2Dwidget.min.js"></script> <script type="text/javascript"> L2Dwidget.init(); </script>
 <div>
-  Tomcat10相比9，要在maven里修改掉
-  tomcat10中使用的包名改了，Jakarta.servlet和javax.servlet它不一样！
-所以在选择Java版本时，需要选择JakartaEE9版本，这样才兼容。如下：
+如下：
 </div>
     <h2>这个图我是觉得有点离谱</h2>
-  <img src="image/63037814_p0.jpg" alt="好怪哦">
+  <a href="MyStudy/好怪哦.html">一张奇怪的图</a>
 </body>
 </html>
