更好的展示图片

--- a/Gallery/showpicture.html
+++ b/Gallery/showpicture.html
@@ -5,19 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script>
-        
-    </script>
+    <style>
+        .img {
+            /* max-width: 200px; */
+        }
+        img {
+            display: inline-block;
+            max-width: 100%;
+            height: auto;
+        }
+
+    </style>
 </head>
 <body>
-    <img src=".\img\1397768504009.png" alt=".\img\1397768504009.png">
-    <img src=".\img\88252773_p0.png" alt=".\img\88252773_p0.png">
-    <img src=".\img\88513285_p0.jpg" alt=".\img\88513285_p0.jpg">
-    <img src=".\img\89168434_p0.jpg" alt=".\img\89168434_p0.jpg">
-    <img src=".\img\89168434_p1.jpg" alt=".\img\89168434_p1.jpg">
-    <img src=".\img\89268058_p0.jpg" alt=".\img\89268058_p0.jpg">
-    <img src=".\img\89472106_p0.jpg" alt=".\img\89472106_p0.jpg">
-    <img src=".\img\89595174_p0.jpg" alt=".\img\89595174_p0.jpg">
-    <img src=".\img\89595174_p1.jpg" alt=".\img\89595174_p1.jpg">
+    <div class="img">
+        
+        <img src=".\img\1397768504009.png" alt=".\img\1397768504009.png">
+        <img src=".\img\88252773_p0.png" alt=".\img\88252773_p0.png">
+        <img src=".\img\88513285_p0.jpg" alt=".\img\88513285_p0.jpg">
+        <img src=".\img\89168434_p0.jpg" alt=".\img\89168434_p0.jpg">
+        <img src=".\img\89168434_p1.jpg" alt=".\img\89168434_p1.jpg">
+        <img src=".\img\89268058_p0.jpg" alt=".\img\89268058_p0.jpg">
+        <img src=".\img\89472106_p0.jpg" alt=".\img\89472106_p0.jpg">
+        <img src=".\img\89595174_p0.jpg" alt=".\img\89595174_p0.jpg">
+    </div>
+
+    <script>
+                    function addExpand() {
+                var imgs = document.getElementsByTagName("img");
+                imgs[0].focus();
+                for(var i = 0;i<imgs.length;i++){
+                    imgs[i].onclick = expandPhoto;
+                    imgs[i].onkeydown = expandPhoto;
+                }
+            }
+            function expandPhoto(){
+                var overlay = document.createElement("div");
+                overlay.setAttribute("id","overlay");
+                overlay.setAttribute("class","overlay");
+                document.body.appendChild(overlay);
+ 
+                var img = document.createElement("img");
+                img.setAttribute("id","expand")
+                img.setAttribute("class","overlayimg");
+                img.src = this.getAttribute("src");
+                document.getElementById("overlay").appendChild(img);
+ 
+                img.onclick = restore;
+            }
+            addExpand();
+    </script>
 </body>
 </html>
