更好的展示图片20211207

--- a/Gallery/showpicture.html
+++ b/Gallery/showpicture.html
@@ -5,29 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        .img {
-            /* max-width: 200px; */
-        }
-        img {
-            display: inline-block;
-            max-width: 100%;
-            height: auto;
-        }
-
-    </style>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="img">
-        
-        <img src=".\img\1397768504009.png" alt=".\img\1397768504009.png">
-        <img src=".\img\88252773_p0.png" alt=".\img\88252773_p0.png">
-        <img src=".\img\88513285_p0.jpg" alt=".\img\88513285_p0.jpg">
-        <img src=".\img\89168434_p0.jpg" alt=".\img\89168434_p0.jpg">
-        <img src=".\img\89168434_p1.jpg" alt=".\img\89168434_p1.jpg">
-        <img src=".\img\89268058_p0.jpg" alt=".\img\89268058_p0.jpg">
-        <img src=".\img\89472106_p0.jpg" alt=".\img\89472106_p0.jpg">
-        <img src=".\img\89595174_p0.jpg" alt=".\img\89595174_p0.jpg">
+    <div class="row">
+        <div class="col-sm-6 col-md-3">
+            <a href="+item+" class="thumbnail">
+            <img src=".\img\1397768504009.png" alt=".\img\1397768504009.png">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="+item+" class="thumbnail">
+            <img src=".\img\88252773_p0.png" alt=".\img\88252773_p0.png">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="+item+" class="thumbnail">
+            <img src=".\img\88513285_p0.jpg" alt=".\img\88513285_p0.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="+item+" class="thumbnail">
+            <img src=".\img\89168434_p0.jpg" alt=".\img\89168434_p0.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="+item+" class="thumbnail">
+            <img src=".\img\89168434_p1.jpg" alt=".\img\89168434_p1.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="+item+" class="thumbnail">
+            <img src=".\img\89268058_p0.jpg" alt=".\img\89268058_p0.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="+item+" class="thumbnail">
+            <img src=".\img\89472106_p0.jpg" alt=".\img\89472106_p0.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="+item+" class="thumbnail">
+            <img src=".\img\89595174_p0.jpg" alt=".\img\89595174_p0.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="+item+" class="thumbnail">
+            <img src=".\img\89595174_p1.jpg" alt=".\img\89595174_p1.jpg">
+            </a>
+            </div>
     </div>
 
     <script>
