修复了点击图片路径错误

--- a/Gallery/showpicture.html
+++ b/Gallery/showpicture.html
@@ -12,42 +12,40 @@
 <body>
     <div class="row">
         <div class="col-sm-6 col-md-3">
-            <a href="+item+" class="thumbnail">
+            <a href=".\img\1397768504009.png" class="thumbnail">
             <img src=".\img\1397768504009.png" alt=".\img\1397768504009.png">
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href="+item+" class="thumbnail">
+            <a href=".\img\88252773_p0.png" class="thumbnail">
             <img src=".\img\88252773_p0.png" alt=".\img\88252773_p0.png">
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href="+item+" class="thumbnail">
+            <a href=".\img\88513285_p0.jpg" class="thumbnail">
             <img src=".\img\88513285_p0.jpg" alt=".\img\88513285_p0.jpg">
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href="+item+" class="thumbnail">
+            <a href=".\img\89168434_p0.jpg" class="thumbnail">
             <img src=".\img\89168434_p0.jpg" alt=".\img\89168434_p0.jpg">
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href="+item+" class="thumbnail">
+            <a href=".\img\89168434_p1.jpg" class="thumbnail">
             <img src=".\img\89168434_p1.jpg" alt=".\img\89168434_p1.jpg">
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href="+item+" class="thumbnail">
+            <a href=".\img\89268058_p0.jpg" class="thumbnail">
             <img src=".\img\89268058_p0.jpg" alt=".\img\89268058_p0.jpg">
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href="+item+" class="thumbnail">
+            <a href=".\img\89472106_p0.jpg" class="thumbnail">
             <img src=".\img\89472106_p0.jpg" alt=".\img\89472106_p0.jpg">
             </a>
             </div>
-            <div class="col-sm-6 col-md-3">
-            
             
     </div>
 
