feat✨:  添加新图片

--- a/Gallery/showpicture.html
+++ b/Gallery/showpicture.html
@@ -12,41 +12,140 @@
 <body>
     <div class="row">
         <div class="col-sm-6 col-md-3">
-            <a href=".\img\1397768504009.png" class="thumbnail">
-            <img src=".\img\1397768504009.png" alt=".\img\1397768504009.png">
+            <a href="./img/1397768504009.png" class="thumbnail">
+            <img src="./img/1397768504009.png" alt="./img/1397768504009.png">
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href=".\img\88252773_p0.png" class="thumbnail">
-            <img src=".\img\88252773_p0.png" alt=".\img\88252773_p0.png">
+            <a href="./img/85340397_p0.png" class="thumbnail">
+            <img src="./img/85340397_p0.png" alt="./img/85340397_p0.png">    
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href=".\img\88513285_p0.jpg" class="thumbnail">
-            <img src=".\img\88513285_p0.jpg" alt=".\img\88513285_p0.jpg">
+            <a href="./img/86589331_p0.png" class="thumbnail">
+            <img src="./img/86589331_p0.png" alt="./img/86589331_p0.png">
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href=".\img\89168434_p0.jpg" class="thumbnail">
-            <img src=".\img\89168434_p0.jpg" alt=".\img\89168434_p0.jpg">
+            <a href="./img/88252773_p0.png" class="thumbnail">
+            <img src="./img/88252773_p0.png" alt="./img/88252773_p0.png">
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href=".\img\89168434_p1.jpg" class="thumbnail">
-            <img src=".\img\89168434_p1.jpg" alt=".\img\89168434_p1.jpg">
+            <a href="./img/88513285_p0.jpg" class="thumbnail">
+            <img src="./img/88513285_p0.jpg" alt="./img/88513285_p0.jpg">
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href=".\img\89268058_p0.jpg" class="thumbnail">
-            <img src=".\img\89268058_p0.jpg" alt=".\img\89268058_p0.jpg">
+            <a href="./img/89168434_p0.jpg" class="thumbnail">
+            <img src="./img/89168434_p0.jpg" alt="./img/89168434_p0.jpg">
             </a>
             </div>
             <div class="col-sm-6 col-md-3">
-            <a href=".\img\89472106_p0.jpg" class="thumbnail">
-            <img src=".\img\89472106_p0.jpg" alt=".\img\89472106_p0.jpg">
+            <a href="./img/89168434_p1.jpg" class="thumbnail">
+            <img src="./img/89168434_p1.jpg" alt="./img/89168434_p1.jpg">
             </a>
             </div>
-            
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/89268058_p0.jpg" class="thumbnail">
+            <img src="./img/89268058_p0.jpg" alt="./img/89268058_p0.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/89472106_p0.jpg" class="thumbnail">
+            <img src="./img/89472106_p0.jpg" alt="./img/89472106_p0.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/90380581_p0.png" class="thumbnail">
+            <img src="./img/90380581_p0.png" alt="./img/90380581_p0.png">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/all_pc.jpg" class="thumbnail">
+            <img src="./img/all_pc.jpg" alt="./img/all_pc.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/chino.png" class="thumbnail">
+            <img src="./img/chino.png" alt="./img/chino.png">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/chino_pc.jpg" class="thumbnail">
+            <img src="./img/chino_pc.jpg" alt="./img/chino_pc.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/chino_smartphone.jpg" class="thumbnail">
+            <img src="./img/chino_smartphone.jpg" alt="./img/chino_smartphone.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/chiya.png" class="thumbnail">
+            <img src="./img/chiya.png" alt="./img/chiya.png">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/chiya_pc.jpg" class="thumbnail">
+            <img src="./img/chiya_pc.jpg" alt="./img/chiya_pc.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/chiya_smartphone.jpg" class="thumbnail">
+            <img src="./img/chiya_smartphone.jpg" alt="./img/chiya_smartphone.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/cocoa.png" class="thumbnail">
+            <img src="./img/cocoa.png" alt="./img/cocoa.png">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/cocoa_pc.jpg" class="thumbnail">
+            <img src="./img/cocoa_pc.jpg" alt="./img/cocoa_pc.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/cocoa_smartphone.jpg" class="thumbnail">
+            <img src="./img/cocoa_smartphone.jpg" alt="./img/cocoa_smartphone.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/loading_img.png" class="thumbnail">
+            <img src="./img/loading_img.png" alt="./img/loading_img.png">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/rize.png" class="thumbnail">
+            <img src="./img/rize.png" alt="./img/rize.png">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/rize_pc.jpg" class="thumbnail">
+            <img src="./img/rize_pc.jpg" alt="./img/rize_pc.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/rize_smartphone.jpg" class="thumbnail">
+            <img src="./img/rize_smartphone.jpg" alt="./img/rize_smartphone.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/syaro.png" class="thumbnail">
+            <img src="./img/syaro.png" alt="./img/syaro.png">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/syaro_pc.jpg" class="thumbnail">
+            <img src="./img/syaro_pc.jpg" alt="./img/syaro_pc.jpg">
+            </a>
+            </div>
+            <div class="col-sm-6 col-md-3">
+            <a href="./img/syaro_smartphone.jpg" class="thumbnail">
+            <img src="./img/syaro_smartphone.jpg" alt="./img/syaro_smartphone.jpg">
+            </a>
+            </div>
     </div>
 
     <script>
