--- a/Gallery/showpicture.html
+++ b/Gallery/showpicture.html
@@ -14,8 +14,33 @@
 <body>
     <div class="row">
         <div class="col-sm-6 col-md-3">
+            <a href="./img/101话.png" class="thumbnail">
+                <img src="./img/101话.png" alt="./img/101话.png">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <a href="./img/101话2.png" class="thumbnail">
+                <img src="./img/101话2.png" alt="./img/101话2.png">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <a href="./img/101话3.png" class="thumbnail">
+                <img src="./img/101话3.png" alt="./img/101话3.png">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3">
             <a href="./img/1397768504009.png" class="thumbnail">
                 <img src="./img/1397768504009.png" alt="./img/1397768504009.png">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <a href="./img/84话1.jpg" class="thumbnail">
+                <img src="./img/84话1.jpg" alt="./img/84话1.jpg">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <a href="./img/84话2.png" class="thumbnail">
+                <img src="./img/84话2.png" alt="./img/84话2.png">
             </a>
         </div>
         <div class="col-sm-6 col-md-3">
@@ -119,6 +144,16 @@
             </a>
         </div>
         <div class="col-sm-6 col-md-3">
+            <a href="./img/QQ图片20211226123224.jpg" class="thumbnail">
+                <img src="./img/QQ图片20211226123224.jpg" alt="./img/QQ图片20211226123224.jpg">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <a href="./img/QQ图片20220201202627.png" class="thumbnail">
+                <img src="./img/QQ图片20220201202627.png" alt="./img/QQ图片20220201202627.png">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3">
             <a href="./img/rize.png" class="thumbnail">
                 <img src="./img/rize.png" alt="./img/rize.png">
             </a>
@@ -149,18 +184,13 @@
             </a>
         </div>
         <div class="col-sm-6 col-md-3">
-            <a href="./img/101话.png" class="thumbnail">
-                <img src="./img/101话.png" alt="./img/101话.png">
+            <a href="./img/冰织2.JPG" class="thumbnail">
+                <img src="./img/冰织2.JPG" alt="./img/冰织2.JPG">
             </a>
         </div>
         <div class="col-sm-6 col-md-3">
-            <a href="./img/101话2.png" class="thumbnail">
-                <img src="./img/101话2.png" alt="./img/101话2.png">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <a href="./img/101话3.png" class="thumbnail">
-                <img src="./img/101话3.png" alt="./img/101话3.png">
+            <a href="./img/第十卷封面.jpg" class="thumbnail">
+                <img src="./img/第十卷封面.jpg" alt="./img/第十卷封面.jpg">
             </a>
         </div>
     </div>
